# busabase

./: .gitignore  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  docker.yml  publish-npm.yml  vercel-cms-example.yml
apps/busabase/: .env.example  .typesafe-i18n.json  Dockerfile  Dockerfile.dockerignore  README.md  drizzle.config.ts  next.config.mjs  package.json  playwright.config.ts  tsconfig.json  tsup.seed.config.ts  vitest.config.ts
apps/busabase-cli/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
apps/busabase-cli/scripts/: assert-help.mjs
apps/busabase-cli/src/: banner.ts  cli.ts  client.ts  config-file.test.ts  config-file.ts  explain-error.test.ts  format.test.ts  format.ts  index.ts  login.test.ts  (+5 more)
apps/busabase-desktop/: .gitignore  README.md  next.config.mjs  package.json  tsconfig.json
apps/busabase-desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/busabase-desktop/src-tauri/capabilities/: default.json
apps/busabase-desktop/src-tauri/icons/: icon.icns
apps/busabase-desktop/src-tauri/permissions/: default.toml
apps/busabase-desktop/src-tauri/resources/: .gitignore
apps/busabase-desktop/src-tauri/src/: desktop_menu.rs  lib.rs  main.rs
apps/busabase-mobile/: .gitignore  README.md  app.json  eas.json  metro.config.js  package.json  tsconfig.json  vitest.config.ts
apps/busabase-sdk/: README.md  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
patches/: @react-native-cookies__cookies@6.2.1.patch  @scelar__nodepod@1.9.9.patch
(+322 files in other folders)
